Fix tasks page layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body,
 
 @layer base {
   .scrollbar-light::-webkit-scrollbar {
-    width: 3px;
+    width: 2px;
   }
 
   .scrollbar-light::-webkit-scrollbar-track {
@@ -27,7 +27,7 @@ body,
   }
 
   .scrollbar-dark::-webkit-scrollbar {
-    width: 3px;
+    width: 2px;
   }
 
   .scrollbar-dark::-webkit-scrollbar-track {
